--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "tls",
   "version": "1.0.0",
-  "description": "",
+  "description": "Um projeto desenvolvido por João Vitor Lima Lago Santos e Paulo Estevão, com o propósito de explicar, por meio do node o envio de imagens criptografadas por sockets tls.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "servidor-tls": "node socket-tls/servidorTLS.js",
+    "cliente-tls": "node socket-tls/clienteTLS.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "João Vitor Lima Lago Santos e Paulo Estevão",
   "license": "ISC"
 }
